Feat: integrate Redis for token management and implement auditing features, login function